      \item Allow interactions of numeric and categorical
      predictors in \code{marginal_effects} to be passed 
      to the \code{effects} argument in any order.
      \item Fix a bug that could lead to incorrect results
      of \code{predict} and related methods when called with
      \code{newdata} in models using the \code{poly} function
      thanks to Brock Ferguson.
    }
  }
}

\section{CHANGES IN VERSION 0.9.0}{
  \subsection{NEW FEATURES}{
    \itemize{ 
      \item Add support for \code{monotonous} effects
      allowing to use ordinal predictors without 
      assuming their categories to be equidistant.
      \item Apply multivariate formula syntax in categorical 
      models to considerably increase modeling flexibility. 
      \item Add the addition argument \code{disp} to define 
      multiplicative factors on dispersion parameters. 
      For linear models, \code{disp} applies to the residual
      standard deviation \code{sigma} so that it can be
      used to weight observations.
      \item Treat the fixed effects design matrix as sparse
      by using the \code{sparse} argument of \code{brm}. 
      This can considerably reduce working memory 
      requirements if the predictors contain many zeros.
      \item Add the \code{cor_fixed} correlation structure to
      allow for fixed user-defined covariance matrices of the 
      response variable.
      \item Allow to pass self-defined \pkg{Stan} functions
      via argument \code{stan_funs} of \code{brm}. 
      \item Add the \code{expose_functions} method allowing to
      expose self-defined \pkg{Stan} functions in \code{R}.
      \item Extend the functionality of the \code{update} 
      method to allow all model parts to be updated.
      \item Center the fixed effects design matrix also 
      in multivariate models. This may lead to increased
      sampling speed in models with many predictors.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{